--- a/app/src/main/res/layout/activity_create_list.xml
+++ b/app/src/main/res/layout/activity_create_list.xml
@@ -8,22 +8,31 @@
     tools:context=".CreateList">
 
 
-
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="false"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_centerHorizontal="false"
         app:srcCompat="@drawable/create_list" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="false"
+        android:layout_margin="24dp"
+        android:text="Create Shopping List"
+        android:textColor="#000"
+        android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="118dp"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="false"
         android:orientation="vertical"
         android:padding="24dp">
 
@@ -36,25 +45,35 @@
             android:textSize="24sp" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:paddingLeft="24dp"
-            android:text="Name"
+
             android:textColor="#000"
             android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add List Name"
+            android:textColor="#000"
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            android:paddingLeft="24dp"
+
+            android:textColor="#000"
+            android:textSize="24sp" />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="24dp"
-        android:text="Create Shopping List"
-        android:textColor="#000"
-        android:textSize="24sp" />
 </RelativeLayout>
