--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,10 @@
         android:id="@+id/shopping_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/imageView3"
-        android:layout_below="@+id/textView3" />
+
+        android:layout_below="@+id/textView3" >
+
+    </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
         android:id="@+id/empty"
@@ -30,6 +32,14 @@
         android:layout_centerVertical="true"
         android:orientation="vertical"
         android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentBottom="false"
+            app:srcCompat="@drawable/add_list_button" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -66,13 +76,14 @@
             android:textSize="24sp" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView3"
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="false"
         android:layout_alignParentBottom="true"
-        app:srcCompat="@drawable/add_list_button" />
+        app:itemBackground="@android:color/background_light"
 
-
+        app:itemIconTint="@drawable/selector"
+        app:itemTextColor="@drawable/selector"
+        app:menu="@menu/bottom_navigation_main" />
 </RelativeLayout>
