--- a/app/src/main/res/layout/activity_basket.xml
+++ b/app/src/main/res/layout/activity_basket.xml
@@ -49,4 +49,12 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="24dp" />
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView3"
+        android:layout_alignEnd="@+id/pat"
+        app:srcCompat="@drawable/round_edit_black_18dp" />
+
 </RelativeLayout>
