--- a/app/src/main/res/layout/activity_continer.xml
+++ b/app/src/main/res/layout/activity_continer.xml
@@ -5,30 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context=".ShopActivity">
-
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:text="Shop"
-        android:textColor="#000"
-        android:textSize="24sp" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+    >
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation"
-        android:layout_below="@+id/textView5"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp" />
+        android:layout_height="match_parent" />
 
     <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
         android:id="@+id/bottom_bar"
