--- a/app/src/main/res/layout/activity_invites.xml
+++ b/app/src/main/res/layout/activity_invites.xml
@@ -7,7 +7,6 @@
     android:background="#fff"
     tools:context=".ShopActivity">
 
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
@@ -17,7 +16,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:text="Shop"
+        android:text="List Invites"
         android:textColor="#000"
         android:textSize="24sp" />
 
@@ -25,18 +24,9 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation"
+
         android:layout_below="@+id/textView5"
         android:paddingLeft="24dp"
         android:paddingRight="24dp" />
 
-    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
-        android:id="@+id/bottom_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/white"
-        app:itemIconTint="@drawable/selector"
-        app:labelVisibilityMode="unlabeled"
-        app:menu="@menu/bottom_navigation_main"/>
 </RelativeLayout>
