--- a/app/src/main/res/layout/baskets.xml
+++ b/app/src/main/res/layout/baskets.xml
@@ -64,20 +64,10 @@
                     android:textStyle="bold"
                     android:typeface="sans" />
 
-                <TextView
-                    android:id="@+id/cost"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:gravity="right"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:typeface="sans" />
-
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/b"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/a"
@@ -103,10 +93,22 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="TextView"
-                    android:textColor="#000"
-                    android:textAlignment="textEnd" />
+                    android:textAlignment="textEnd"
+                    android:textColor="#000" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/cost"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/b"
+                android:layout_alignParentEnd="true"
+                android:gravity="right"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:typeface="sans" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
