--- a/app/src/main/res/layout/update_quantity.xml
+++ b/app/src/main/res/layout/update_quantity.xml
@@ -53,7 +53,17 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="32dp"
             android:background="#000"
+            android:visibility="gone"
             android:padding="16dp" />
+
+        <NumberPicker
+            android:id="@+id/numberPicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:id="@+id/textView10"
