--- a/app/src/main/res/layout/update_quantity.xml
+++ b/app/src/main/res/layout/update_quantity.xml
@@ -31,10 +31,29 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
-            android:text="TextView"
+            android:text=""
             android:textColor="#000"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView78"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="32dp"
+            android:paddingTop="24dp"
+            android:text="List"
+            android:textColor="#000" />
+
+        <Spinner
+            android:id="@+id/spinner5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="32dp"
+            android:padding="16dp"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/textView8"
@@ -52,18 +71,8 @@
             android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="32dp"
-            android:background="#000"
-            android:visibility="gone"
-            android:padding="16dp" />
-
-        <NumberPicker
-            android:id="@+id/numberPicker"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" />
+            android:padding="16dp"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/textView10"
