Sunday, fixes and changed profile to notifications

--- a/app/src/main/res/layout/activity_invites.xml
+++ b/app/src/main/res/layout/activity_invites.xml
@@ -15,7 +15,7 @@
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:text="Profile"
+        android:text="Notifications"
         android:textColor="@android:color/background_dark"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -24,10 +24,19 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/textView"
+        android:background="#ffffff"
         android:paddingLeft="24dp"
-        android:background="#3D9AD5"
         android:paddingRight="24dp" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        app:srcCompat="@drawable/baseline_person_outline_black_18dp" />
 
 </RelativeLayout>
