--- a/app/src/main/res/layout/invite_item.xml
+++ b/app/src/main/res/layout/invite_item.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
- >
+    android:padding="8dp"
+    android:weightSum="5">
+
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_weight="4"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/baseline_person_outline_black_18dp" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
+        android:gravity="center_vertical"
         android:paddingLeft="24dp"
         android:paddingTop="8dp"
-        android:paddingRight="24dp"
+        android:paddingRight="8dp"
         android:paddingBottom="8dp"
-        android:text="TextView"
+        android:singleLine="false"
         android:textColor="@android:color/darker_gray"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:typeface="sans" />
 </LinearLayout>
