--- a/app/src/main/res/layout/activity_invites.xml
+++ b/app/src/main/res/layout/activity_invites.xml
@@ -36,7 +36,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:visibility="gone"
         app:srcCompat="@drawable/baseline_person_outline_black_18dp" />
 
 </RelativeLayout>
