--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="twitter_blue">#1da1f2</color>
     <color name="deep_gray">#ff657786</color>
+    <color name="white">#ffffff</color>
 
     <color name="tab_selected">@color/twitter_blue</color>
 </resources>
