--- a/app/src/main/res/layout/layout_full_screen_dialog.xml
+++ b/app/src/main/res/layout/layout_full_screen_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -33,6 +32,16 @@
                 android:textSize="24dp"
                 android:textStyle="bold" />
             <TextView
+                android:id="@+id/shopping_mode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16sp"
+                android:text="Shopping Mode"
+                android:textColor="@android:color/background_dark"
+                android:textSize="24dp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/add_receipt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="16sp"
-                android:text="View receipt"
+                android:text="My receipts"
                 android:textColor="@android:color/background_dark"
                 android:textSize="24dp"
                 android:textStyle="bold" />
