--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -23,12 +23,42 @@
         android:typeface="sans" />
 
 
+    <LinearLayout
+        android:id="@+id/l1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView5"
+        android:orientation="vertical"
+        android:weightSum="2">
+        <TextView
+            android:id="@+id/pick_cat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:text="Pick Category"
+            android:textColor="@android:color/background_dark"
+            android:textSize="18sp"
+            android:textStyle="bold"
+
+            android:typeface="sans" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/cat_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp" />
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-         android:layout_below="@+id/textView5"
+        android:layout_below="@id/l1"
         android:paddingLeft="24dp"
         android:paddingRight="24dp" />
 
