--- a/app/src/main/res/layout/cat_item.xml
+++ b/app/src/main/res/layout/cat_item.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:id="@+id/asd"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="16dp">
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:text="TextView"
-        android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
 
+        android:paddingLeft="24dp"
+        android:paddingTop="24dp"
+        android:paddingRight="24dp"
+        android:paddingBottom="24dp"
+        android:text="TextView"
+
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:typeface="sans" />
 </LinearLayout>
